Removed unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,69 +1,24 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-#
-# Project specific excludes
-#
-
-tomcat
-
-#
-# Default excludes
-#
-
-# Binaries
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-*.war
-*.ear
-*.sar
-*.class
-
-# Maven 
-target/
-
-# IntelliJ project files 
+#Intellij project files
+**/.idea/
 *.iml
-*.iws
-*.ipr
-.idea/
 
-# eclipse project file
-.settings/
-.classpath
-.project
+#Eclipse project files
+**/.project
+**/.classpath
+**/.settings/
 
-# NetBeans specific
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
+#Added this, because the above doesn't seem to work in my Eclipse
+*.class
+*.project
+*.settings
+*.classpath
+*.metadata
 
 
-# OS
-.DS_Store
+#Generated Maven files
+**/release.properties
+**/pom.xml.releaseBackup
+**/pom.xml.releaseVersions
 
-# Misc
-*.swp
-release.properties
-pom.xml.releaseBackup
-pom.xml.tag
+
+/target
